# system_manager

./: .gitignore  README.md
GUI/src/: CMakeLists.txt  Client_bridge.cpp  Client_bridge.h  MainWindow.cpp  MainWindow.h  RPC_client.cpp  RPC_client.h  main.cpp
RPC/: commands.txt  service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h  service.proto  service_pb2.py  service_pb2_grpc.py
RPC/src/: RPC_server_manager.py
database/: sqlite3_commands.txt  sqllite_manager.py  temperatures.db
service/: create_symlink_and_register.sh  temp_reader.py  temperature_monitor.service
